Favicons and more api operations.
